--- a/2023/Day_17_AoC_2023.ipynb
+++ b/2023/Day_17_AoC_2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 373,
    "id": "8243fe49-b2f8-40a9-b823-812c82b2f116",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,9 @@
     "        for row in grid:\n",
     "            print(''.join(str(val) for val in row))\n",
     "    else:\n",
-    "        print(''.join(str(val) for val in grid[row]))"
+    "        print(''.join(str(val) for val in grid[row]))\n",
+    "        \n",
+    "from collections import defaultdict"
    ]
   },
   {
