--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -16,17 +16,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Shoelace Theorem: Given a set of vertices in a polygon going clockwise - get the area (minuse the boundary points). If you are going counter clockwise the area will be negative (take abs). \n",
+    "Pick's Theorem - given the number of boundary points AND the number of interior points in a simple polygon - find the area."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
