--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "when writing recursion don't forget to add a return in front of the recursion call."
+   ]
   },
   {
    "cell_type": "code",
