--- a/2025/Day2_2025_AoC.ipynb
+++ b/2025/Day2_2025_AoC.ipynb
@@ -30,39 +30,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "808c3365-0315-498b-b3a2-0406ccda04b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['5959566378-5959623425,946263-1041590,7777713106-7777870316,35289387-35394603,400-605,9398763-9592164,74280544-74442206,85684682-85865536,90493-179243,202820-342465,872920-935940,76905692-76973065,822774704-822842541,642605-677786,3759067960-3759239836,1284-3164,755464-833196,52-128,3-14,30481-55388,844722790-844967944,83826709-83860070,9595933151-9595993435,4216-9667,529939-579900,1077949-1151438,394508-486310,794-1154,10159-17642,5471119-5683923,16-36,17797-29079,187-382']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_data(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0c9d2a5d-c73c-4d4a-91c8-a6171373b69f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = '11-22,95-115,998-1012,1188511880-1188511890,222220-222224,\\\n",
-    "1698522-1698528,446443-446449,38593856-38593862,565653-565659,\\\n",
-    "824824821-824824827,2121212118-2121212124'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 91,
    "id": "f39abb02-7afb-49b5-a011-a1a647bad06e",
    "metadata": {},
@@ -74,22 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "id": "b9301c53-ac23-4700-acbe-1bccb2ea51f8",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "19605500130\n",
-      "36862281418\n"
+      "36862281418\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
     "def is_pattern_1(num):\n",
     "    len_num = len(str(num))\n",
     "    half_len_num = len_num // 2\n",
@@ -103,6 +71,9 @@
     "            return True, a, b\n",
     "        else:\n",
     "            return False, 0, 0\n",
+    "\n",
+    "def is_pattern_2(num_str):\n",
+    "    return re.fullmatch(pattern, num_str) is not None\n",
     "            \n",
     "part1 = 0\n",
     "part2 = 0\n",
@@ -118,152 +89,9 @@
     "            part2 += val\n",
     "            #print(val)\n",
     "print(part1)\n",
-    "print(part2)"
+    "print(part2)\n",
+    "print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "f78bea5b-d35a-491d-ac19-3e9cc62e5392",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "def is_pattern_2(num_str):\n",
-    "    return re.fullmatch(pattern, num_str) is not None\n",
-    "\n",
-    "part2 = 0\n",
-    "lines = [tuple(val.split('-')) for val in id_list]\n",
-    "for line in lines:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "5c52b31b-0055-4b1b-a37e-b7910ea8fd2f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2414211056.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[72]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m^(.+?)(?:\\1)+$\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "^(.+?)(?:\\1)+$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "e0471cab-8df0-4a09-8b2b-635f6c217f21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "# The regex pattern\n",
-    "pattern = r\"^(.+?)(?:\\1)+$\"\n",
-    "\n",
-    "# Example strings to test\n",
-    "string1 = \"ababab\"  # Matches: \"ab\" repeated three times\n",
-    "string2 = \"abcabcabc\" # Matches: \"abc\" repeated three times\n",
-    "string3 = \"aaaa\"    # Matches: \"a\" repeated four times\n",
-    "string4 = \"hello\"   # Does not match\n",
-    "string5 = \"abcab\"   # Does not match\n",
-    "\n",
-    "# Applying the regex using re.match()\n",
-    "match1 = re.match(pattern, string1)\n",
-    "match2 = re.match(pattern, string2)\n",
-    "match3 = re.match(pattern, string3)\n",
-    "match4 = re.match(pattern, string4)\n",
-    "match5 = re.match(pattern, string5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "bd13fbda-fb92-42c1-8321-fc30c0953095",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object, got 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[90]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m re.fullmatch(pattern, \u001b[32m1123\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/tritonx/lib/python3.13/re/__init__.py:172\u001b[39m, in \u001b[36mfullmatch\u001b[39m\u001b[34m(pattern, string, flags)\u001b[39m\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfullmatch\u001b[39m(pattern, string, flags=\u001b[32m0\u001b[39m):\n\u001b[32m    170\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Try to apply the pattern to all of the string, returning\u001b[39;00m\n\u001b[32m    171\u001b[39m \u001b[33;03m    a Match object, or None if no match was found.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m172\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _compile(pattern, flags).fullmatch(string)\n",
-      "\u001b[31mTypeError\u001b[39m: expected string or bytes-like object, got 'int'"
-     ]
-    }
-   ],
-   "source": [
-    "re.fullmatch(pattern, 1123) is not None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "90bd6c04-e12d-4e1b-bfde-81d8d59a4bba",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "10 ** 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "e992d07b-89c0-4937-8acb-ec00749351c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n"
-     ]
-    }
-   ],
-   "source": [
-    "for val in range(11,22):\n",
-    "    print(val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b692bfc-a1b5-4e32-a44f-5fd6aab5aa21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
