--- a/aoc_bag_of_trick.ipynb
+++ b/aoc_bag_of_trick.ipynb
@@ -268,6 +268,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_8_neighbors(grid, row, col):\n",
+    "    \"\"\"\n",
+    "    Returns a list of the 8 neighbors of a character at a given (row, col) in a grid.\n",
+    "\n",
+    "    Args:\n",
+    "        grid: A list of strings representing the grid.\n",
+    "        row: The row index of the character.\n",
+    "        col: The column index of the character.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of characters representing the neighbors.\n",
+    "    \"\"\"\n",
+    "    neighbors = []\n",
+    "    num_rows = len(grid)\n",
+    "    num_cols = len(grid[0]) if num_rows > 0 else 0\n",
+    "\n",
+    "    # Define the 8 possible relative offsets for neighbors\n",
+    "    # (dr, dc) represents (delta row, delta column)\n",
+    "    directions = [\n",
+    "        (-1, -1), (-1, 0), (-1, 1),  # Top row\n",
+    "        (0, -1),           (0, 1),   # Middle row (excluding self)\n",
+    "        (1, -1),  (1, 0),  (1, 1)    # Bottom row\n",
+    "    ]\n",
+    "\n",
+    "    for dr, dc in directions:\n",
+    "        neighbor_row, neighbor_col = row + dr, col + dc\n",
+    "\n",
+    "        # Check if the neighbor's coordinates are within the grid boundaries\n",
+    "        if 0 <= neighbor_row < num_rows and 0 <= neighbor_col < num_cols:\n",
+    "            neighbors.append(grid[neighbor_row][neighbor_col])\n",
+    "\n",
+    "    return neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -335,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
